<?xml version="1.0"?>
<package format="2">
  <name>otomo-serial</name>
  <version>0.0.0</version>
  <description>The otomo-serial package</description>

  <maintainer email="thomaswallis0@gmail.com">tom</maintainer>
  <author email="thomaswallis0@gmail.com">tom</author>

  <license>MIT</license>

  <url type="website">http://github.com/TWALL9/otomo-serial/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>async_comm</depend>
  <depend>otomo_msgs</depend>
  <exec_depend>roslaunch</exec_depend>
</package>
